bug fix - error with multiple text shadow on mobile

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -12,12 +12,7 @@
   }
   .title {
     line-height: 1;
-    text-shadow:
-      0 0 60px rgba(0,0,0,.66),
-      0 0 60px rgba(0,0,0,.66),
-      0 0 60px rgba(0,0,0,.66),
-      0 0 60px rgba(0,0,0,.66)
-    ;
+    text-shadow: 0 0 50px $black;
   }
 }
 
